--- a/docs/manual/accumulation-checker.tex
+++ b/docs/manual/accumulation-checker.tex
@@ -55,7 +55,7 @@ Also define a bottom type, analogous to
 \href{https://github.com/typetools/checker-framework/blob/master/framework/src/test/java/testaccumulation/qual/TestAccumulationBottom.java}{TestAccumulationBottom.java}.
 It should take no arguments, and should be a subtype of the accumulator type you defined earlier.
 
-You may also choose to define a predicate annotation, analogous to
+You may also define a predicate annotation, analogous to
 \href{https://github.com/typetools/checker-framework/blob/master/framework/src/test/java/testaccumulation/qual/TestAccumulationPredicate.java}{TestAccumulationPredicate.java}.
 A predicate annotation allows you to write specifications with disjunctions (the accumulation annotation implicitly already permits
 specifications with conjunctions). If you define such an annnotation, it must have a single argument named \<value> of type \<String>.
