--- a/docs/manual/accumulation-checker.tex
+++ b/docs/manual/accumulation-checker.tex
@@ -57,13 +57,18 @@ It should take no arguments, and should be a subtype of the accumulator type you
 
 You may also define a predicate annotation, analogous to
 \href{https://github.com/typetools/checker-framework/blob/master/framework/src/test/java/testaccumulation/qual/TestAccumulationPredicate.java}{TestAccumulationPredicate.java}.
-A predicate annotation allows you to write specifications with disjunctions using the \<||> operator (the accumulation annotation
-implicitly already permits specifications with conjunctions, but they are also supported in predicates using the \<\&\&> operator).
-Predicates also support the logical complement (\<!>) operator, which can be used for specifications like \<"!x">, which means
-"it is not true that x was definitely accumulated" (equivalently, "there is no path on which x was accumulated").
-Note that this does NOT mean "x was not accumulated"---it is not a violation of the specification \<"!x"> if x is accumulated
+It must have a single argument named \<value> of type \<String>.
+The predicate syntax supports
+\begin{itemize}
+\item \<||> disjunctions
+\item \<\&\&> conjunctions
+\item \<!> logical complement.  \<"!x"> means
+``it is not true that \<x> was definitely accumulated'' or, equivalently, ``there is no path on which \<x> was accumulated''.
+Note that this does \textbf{not} mean ``\<x> was not accumulated'' --- it is not a violation of the specification \<"!x"> if \<x> is accumulated
 on some paths, but not others.
-If you define a predicate annnotation, it must have a single argument named \<value> of type \<String>.
+\item \<(...)> parentheses for precedence
+\end{itemize}
+
 
 \paragraphAndLabel{Setting up the checker}{accumulation-setup}
 
