--- a/framework/src/main/java/org/checkerframework/common/accumulation/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/accumulation/messages.properties
@@ -1,1 +1,1 @@
-predicate.invalid=An unparseable predicate was found in an annotation. Predicates must be produced by this grammar: S --> method name | (S) | S && S | S || S. The message from the evaluator was: %s
+predicate.invalid=Unparseable predicate. Predicates must be produced by this grammar: S --> method name | (S) | S && S | S || S. The message from the evaluator was: %s
