Remove incorrect documentation about defaulting
@UpperBound does not affect defaulting.

--- a/docs/manual/advanced-features.tex
+++ b/docs/manual/advanced-features.tex
@@ -212,8 +212,7 @@ rules are used in order, until one applies.
   (Section~\ref{default-for-use})
 \item
   If no \<@NoDefaultQualifierForUse> is written on the declaration of \<MyClass>, the qualifier
-  explicitly written on the declaration of \<MyClass>, or specified via
-  \refqualclass{framework/qual}{UpperBoundFor}. (Section~\ref{default-for-use})
+  explicitly written on the declaration of \<MyClass>. (Section~\ref{default-for-use})
 \item
   The qualifier with a meta-annotation \<@DefaultFor(types = MyClass.class)>. (Section~\ref{default-for-use})
 \item
