Qualify support for self

--- a/docs/manual/advanced-features.tex
+++ b/docs/manual/advanced-features.tex
@@ -1141,7 +1141,8 @@ expression as an argument include:
 \end{itemize}
 
 The set of permitted expressions is a subset of all Java expressions,
-with a few extensions, notably \code{<self>} and formal parameters like \<\#1>.
+with a few extensions, formal parameters like \<\#1> and (for some type
+systems) \code{<self>}.
 
 \begin{itemize}
 \item
