Another example of a method that throws if its argument is null

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -1219,6 +1219,7 @@ as an argument.  Examples include
 \begin{Verbatim}
   java.lang.Double.valueOf(String)
   java.lang.String.contains(CharSequence)
+  java.lang.Object.checkNotNull(Object)
   org.junit.Assert.assertNotNull(Object)
   com.google.common.base.Preconditions.checkNotNull(Object)
 \end{Verbatim}
