--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -1096,7 +1096,7 @@ annotated \<@Nullable>, and a parameter that is compared against \<null>
 may need to be annotated \<@Nullable>.
 
 The specification should state any facts that are relevant to callees.
-When checking a method, uses only the specification, not the
+When checking a method, use only the specification, not the
 implementation, of other methods.  (Equivalently, type-checking is
 ``modular'' or ``intraprocedural''.)
 
